# python-pybind11-profile-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
chunkscore/: __init__.py  dataset.py  pipeline.py  textscore_py.py
scripts/: benchmark.py  capture-media.sh  render_terminal_png.py  run_cprofile.py
src/: textscore_cpp.cpp
