[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "chunkscore-demo"
version = "0.1.0"
description = "cProfile -> pybind11 demo for Zenn article"
requires-python = ">=3.10"
readme = "README.md"

[tool.scikit-build]
cmake.version = ">=3.21"
wheel.packages = ["chunkscore"]
